@@ -15,7 +15,7 @@
     // BSD/MacOSX systems. Don't contact me if you experience any problems
     // with Karel's script. Instead, contact Karel directly.
 
-//#define ONLY_STATIC
+#define ONLY_STATIC
     // When compiling Bobcat for e.g., CYGWIN under Windows, activate the 
     // above #define: it prevents the construction of the shared library
 
@@ -26,7 +26,7 @@
     // The options "-isystem tmp" must always be used, are set in
     // icmake/library and should not be altered.
 
-#define PTHREAD     "sharedmutex sharedblock sharedmemory sharedsegment "
+#define PTHREAD     "sharedmutex sharedblock sharedmemory sharedsegment " \
                     "process processdata"
     // Classes requiring -lpthread
 
