@@ -1,7 +1,7 @@
 #include "process.ih"
 
-Process &Process::operator()(size_t bufSize, IOMode mode, ProcessType type,
-size_t timeLimit) 
+Process &Process::operator()(IOMode mode, ProcessType type, size_t timeLimit,
+                             size_t bufSize) 
 {
     d_data->d_bufSize = bufSize;
     d_timeLimit = timeLimit;
