@@ -1,4 +1,13 @@
+bobcat (3.19.00)
+    
   * Added Signal::remove, removing a previously added signal handler function
+
+  * Redesigned Process so that it (partially) uses the pimpl idiom. Also added
+    the eoi manipulator and several new member functions.
+
+  * Updated man-pages for Pipe, Redirector, Process, and Signal, 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 27 Dec 2013 17:36:41 +0100
 
 bobcat (3.18.01)
 
